--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Course"]
 	path = Course
 	url = git@course-gitlab.tuni.fi:tie-02402-ohj3_2019-2020/courselibrary.git
+[submodule "courselibrary"]
+	path = courselibrary
+	url = git@course-gitlab.tuni.fi:tie-02402-ohj3_2019-2020/courselibrary.git
